# divinelight

./: .env.example  .gitignore  Cargo.toml  IMPROVE.md  IMPROVE2.md  IMPROVE3.md  README.md  TODO.md  test_results.md
docs/: README.md  agent_system_design.md  api_frontend_backend_plan.md  api_spec.md  app_stack.md  architecture.md  architecture_overview.md  backend_api_design.md  data_flow.md  data_flow_diagrams.md  data_models.md  database_schema.md  experimentation_framework.md  extensibility.md  frontend_design.md  implementation_blueprint.md  memory_consistency_hallucination.md  performance_considerations.md  phased_development_plan.md  retrieval_strategy.md  risks_limits.md  security_privacy.md  system_design_summary.md  system_vision.md  testing_plan.md
frontend/: index.html
src/: cli.rs  config.rs  lib.rs  main.rs  tests.rs
src/agents/: mod.rs
src/api/: mod.rs
src/backup/: mod.rs
src/models/: agent.rs  belief.rs  graph.rs  memory.rs  mod.rs
src/reasoning/: mod.rs
src/retrieval/: mod.rs
src/storage/: graph.rs  memory.rs  mod.rs
