[package]
name = "divinelight"
version = "0.1.0"
edition = "2021"
description = "Unified AI Memory System with MemPalace, Graphify, and Synt-inspired agents"
authors = ["DivineLight Team"]
license = "MIT"

[lib]
name = "divinelight"
path = "src/lib.rs"

[[bin]]
name = "divinelight"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
